# amazon-scraper

./: .gitignore  pyproject.toml  run.py
amazon_scraper/: __init__.py  settings.py
amazon_scraper/_utils/: url.py
